# midistral

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  LICENSE  README.md  default.env  pyproject.toml
backend/notebooks/: Dockerfile  midi_audio_analysis.ipynb  midistral_finetuning.ipynb  models_evaluation.ipynb  populating_db.ipynb  requirements.txt
backend/src/midistral/: abc_utils.py  audio_analysis.py  config.py  dataset_features.py  finetune.py  generate.py  infer.py  main.py  midi_utils.py  prepare_dataset.py  serve.py  types.py  upload_dataset.py
backend/src/midistral/db/: crud.py  schemas.py
backend/src/midistral/db/firestore/: crud.py  database.py  utils.py
backend/src/midistral/db/sqlite/: crud.py  database.py  models.py
backend/src/midistral/storage/: gcs.py
frontend/: .env  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
frontend/src/: app.html  app.postcss
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/generation/: +page.svelte
frontend/src/stores/: descriptions.ts
